--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,12 +7,11 @@
 </head>
 <body>
     <div class = 'main-content'>
-        <{{>header}}
+        {{>header}}
         <p>It uses data from mapbox.com and darksky.net.</p>
         <img class='portrait' src='/img/robot.png'>
     </div>
     
     {{>footer}}
 </body>
-
 </html>
